--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,12 @@ html {
   background: #3469A4;
 }
 
+.vertical-align {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 body {
   margin: 0;
   height: 100%;
